feat: eventListener Legend "About"

--- a/about.html
+++ b/about.html
@@ -118,13 +118,27 @@
                                 </p>
                             </div>
                             <ul>
-                                <li><strong>poser un cadre expérimental</strong> (ce)</li>
-                                <li><strong>passer en mode pluridisciplinaire</strong> (mp)</li>
-                                <li><strong>rythmer le programme</strong> (p)</li>
-                                <li><strong>impliquer et former les agents</strong> (a)</li>
-                                <li><strong>travailler à partir de cas concrets</strong> (cc)</li>
-                                <li><strong>s’appuyer sur l'écosystème</strong> (e)</li>
-                                <li><strong>se projeter dans le futur labo</strong> (fl)</li>
+                                <li>
+                                    <p id="experimental"><span>un cadre expérimental</span> (ce)</p>
+                                </li>
+                                <li>
+                                    <p id="multidisciplinary"><span>passer en mode pluridisciplinaire</span> (mp)</p>
+                                </li>
+                                <li>
+                                    <p id="programRhythm"><span>rythmer le programme</span> (p)</p>
+                                </li>
+                                <li>
+                                    <p id="involveAndForm"><span>impliquer et former les agents</span> (a)</p>
+                                </li>
+                                <li>
+                                    <p id="concreteCase"><span>travailler à partir de cas concrets</span> (cc)</p>
+                                </li>
+                                <li>
+                                    <p id="ecosysteme"><span>s’appuyer sur l'écosystème</span> (e)</p>
+                                </li>
+                                <li>
+                                    <p id="project"><span>se projeter dans le futur labo</span> (fl)</p>
+                                </li>
                             </ul>
                             <div class="side">
                                 <p>Ce site vise à expliciter ces principes et apporte un retour d’expérience sur leur
