--- a/faq.html
+++ b/faq.html
@@ -155,8 +155,8 @@
                     </p>
                     <div class=" links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="involve" class="goToSection">Comment impliquer les agents publics?</p>
-                        <p id="multi" class="goToSection">Comment intégrer des disciplines diverses?</p>
+                        <p id="involveAndForm" class="goToSection">Comment impliquer les agents publics?</p>
+                        <p id="multidisciplinary" class="goToSection">Comment intégrer des disciplines diverses?</p>
                     </div>
                 </article>
 
@@ -170,8 +170,8 @@
                     </p>
                     <div class="links-box"
                         style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="rhythm" class="goToSection">Comment bien rythmer la démarche?</p>
-                        <p id="concrete" class="goToSection">Comment travailler à partir de cas?</p>
+                        <p id="programRhythm" class="goToSection">Comment bien rythmer la démarche?</p>
+                        <p id="concreteCase" class="goToSection">Comment travailler à partir de cas?</p>
                     </div>
                 </article>
 
