feat: text bandeau info

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div class="information marquee-info">
             <div class="container marquee-info-content">
 
-                <p class="info-content">Open sourcer le protocole de montage de cellules d’innovations expérimenter dans
-                    sept collectivités territoriales entre 2016 et 2020 lors du programme Transfo.
-                    <span> Open sourcer le protocole de montage de cellules d’innovations expérimenter dans sept
-                        collectivités territoriales entre 2016 et 2020 lors du programme Transfo.</span>
+                <p class="info-content">Bienvenue sur le site de la Transfo code source - le programme qui expérimente
+                    des laboratoires d’innovation publique au sein des administrations.
+                    <span> Bienvenue sur le site de la Transfo code source - le programme qui expérimente des
+                        laboratoires d’innovation publique au sein des administrations.</span>
                 </p>
 
             </div>
