feat: hypothese illustrations

--- a/index.html
+++ b/index.html
@@ -892,10 +892,10 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/programRhythm/pedales-legendes.svg), url(images/programRhythm/pedales.png);">
+                        style="background-image:  url(images/programRhythm/suspensions-legendes.svg), url(images/programRhythm/suspensions.png);">
                         <p class="fig">Fig.p</p>
 
-                        <div class="mini-img" style="background-image: url(images/programRhythm/pedales-min.png);">
+                        <div class="mini-img" style="background-image: url(images/programRhythm/suspensions-min.png);">
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
@@ -1617,10 +1617,10 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/concreteCase/suspensions-legendes.svg), url(images/concreteCase/suspensions.png);">
+                        style="background-image:  url(images/concreteCase/pedales-legendes.svg), url(images/concreteCase/pedales.png);">
                         <p class="fig">Fig.cc</p>
 
-                        <div class="mini-img" style="background-image: url(images/concreteCase/suspensions-min.png);">
+                        <div class="mini-img" style="background-image: url(images/concreteCase/pedales-min.png);">
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
@@ -2104,10 +2104,10 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/ecosysteme/gps-legendes.svg), url(images/ecosysteme/gps.png);">
+                        style="background-image:  url(images/ecosysteme/hautparleur-legendes.svg), url(images/ecosysteme/hautparleur.png);">
                         <p class="fig">Fig.e</p>
 
-                        <div class="mini-img" style="background-image: url(images/ecosysteme/gps-min.png);">
+                        <div class="mini-img" style="background-image: url(images/ecosysteme/hautparleur-min.png);">
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
@@ -2486,10 +2486,10 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/project/hautparleur-legendes.svg), url(images/project/hautparleur.png);">
+                        style="background-image:  url(images/project/gps-legendes.svg), url(images/project/gps.png);">
                         <p class="fig">Fig.fl</p>
 
-                        <div class="mini-img" style="background-image: url(images/project/hautparleur-min.png);">
+                        <div class="mini-img" style="background-image: url(images/project/gps-min.png);">
                             <p class="fig-cs">Fig.cs</p>
                         </div>
 
