feat: legendes pluridisciplinaire

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/experimental/carcasse-legendes.svg), url(images/experimental/carcasse.png);">
+                        style="background-image:  url(images/experimental/carcasse-legendes.), url(images/experimental/carcasse.png);">
                         <p class="fig">Fig.cc</p>
 
                         <div class="mini-img" style="background-image: url(images/experimental/carcasse-min.png);">
@@ -892,7 +892,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/programRhythm/suspensions-legendes.svg), url(images/programRhythm/suspensions.png);">
+                        style="background-image:  url(images/programRhythm/suspensions-legendes.), url(images/programRhythm/suspensions.png);">
                         <p class="fig">Fig.p</p>
 
                         <div class="mini-img" style="background-image: url(images/programRhythm/suspensions-min.png);">
@@ -1188,7 +1188,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/involveAndForm/transmission-legendes.svg), url(images/involveAndForm/transmission.png);">
+                        style="background-image:  url(images/involveAndForm/transmission-legendes.), url(images/involveAndForm/transmission.png);">
                         <p class="fig">Fig.a</p>
 
                         <div class="mini-img"
@@ -1617,7 +1617,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/concreteCase/pedales-legendes.svg), url(images/concreteCase/pedales.png);">
+                        style="background-image:  url(images/concreteCase/pedales-legendes.), url(images/concreteCase/pedales.png);">
                         <p class="fig">Fig.cc</p>
 
                         <div class="mini-img" style="background-image: url(images/concreteCase/pedales-min.png);">
@@ -2104,7 +2104,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/ecosysteme/hautparleur-legendes.svg), url(images/ecosysteme/hautparleur.png);">
+                        style="background-image:  url(images/ecosysteme/hautparleur-legendes.), url(images/ecosysteme/hautparleur.png);">
                         <p class="fig">Fig.e</p>
 
                         <div class="mini-img" style="background-image: url(images/ecosysteme/hautparleur-min.png);">
@@ -2486,7 +2486,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/project/gps-legendes.svg), url(images/project/gps.png);">
+                        style="background-image:  url(images/project/gps-legendes.), url(images/project/gps.png);">
                         <p class="fig">Fig.fl</p>
 
                         <div class="mini-img" style="background-image: url(images/project/gps-min.png);">
