--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/experimental/carcasse-legendes.), url(images/experimental/carcasse.png);">
+                        style="background-image:  url(images/experimental/carcasse-legendes.svg), url(images/experimental/carcasse.png);">
                         <p class="fig">Fig.cc</p>
 
                         <div class="mini-img" style="background-image: url(images/experimental/carcasse-min.png);">
