feat: legendes cas concrets

--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
                 <div class="title-box">
 
                     <h2>Contacts</h2>
-                    <div>
+                    <div class="social-links">
                         <ul>
                             <li> <a href="https://twitter.com/La27eregion" target="_blank">
                                     <img src="images/about/transfo-twitter.png" alt="logo twitter">
