--- a/index.html
+++ b/index.html
@@ -1617,7 +1617,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/concreteCase/pedales-legendes.), url(images/concreteCase/pedales.png);">
+                        style="background-image:  url(images/concreteCase/pedales-legendes.svg), url(images/concreteCase/pedales.png);">
                         <p class="fig">Fig.cc</p>
 
                         <div class="mini-img" style="background-image: url(images/concreteCase/pedales-min.png);">
