feat: legendes rythmer le programme

--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/programRhythm/suspensions-legendes.), url(images/programRhythm/suspensions.png);">
+                        style="background-image:  url(images/programRhythm/suspensions-legendes.svg), url(images/programRhythm/suspensions.png);">
                         <p class="fig">Fig.p</p>
 
                         <div class="mini-img" style="background-image: url(images/programRhythm/suspensions-min.png);">
