feat: legendes former les agents

--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/involveAndForm/transmission-legendes.), url(images/involveAndForm/transmission.png);">
+                        style="background-image:  url(images/involveAndForm/transmission-legendes.svg), url(images/involveAndForm/transmission.png);">
                         <p class="fig">Fig.a</p>
 
                         <div class="mini-img"
