feat: legendes ecosysteme

--- a/index.html
+++ b/index.html
@@ -2104,7 +2104,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/ecosysteme/hautparleur-legendes.), url(images/ecosysteme/hautparleur.png);">
+                        style="background-image:  url(images/ecosysteme/hautparleur-legendes.svg), url(images/ecosysteme/hautparleur.png);">
                         <p class="fig">Fig.e</p>
 
                         <div class="mini-img" style="background-image: url(images/ecosysteme/hautparleur-min.png);">
