--- a/index.html
+++ b/index.html
@@ -2486,7 +2486,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/project/gps-legendes.), url(images/project/gps.png);">
+                        style="background-image:  url(images/project/gps-legendes.svg), url(images/project/gps.png);">
                         <p class="fig">Fig.fl</p>
 
                         <div class="mini-img" style="background-image: url(images/project/gps-min.png);">
