feat: texticon "défis"

--- a/about.html
+++ b/about.html
@@ -77,13 +77,13 @@
                     <p>La Transfo Code Source <strong class="black">« open source » * le protocole de création de
                             laboratoires d’innovation internes</strong> aux collectivités territoriales, expérimenté
                         lors du programme La Transfo entre 2016 et 2020. Sept principes actifs composent La Transfo:
-                        <strong>poser un cadre expérimental</strong> (ce),
-                        <strong>passer en mode pluridisciplinaire</strong> (mp),
-                        <strong>rythmer le programme</strong> (p),
-                        <strong>impliquer et former les agents</strong> (a),
-                        <strong>travailler à partir de cas concrets</strong> (cc),
-                        <strong>s’appuyer sur l'écosystème</strong> (e),
-                        <strong>se projeter dans le futur labo</strong> (fl).
+                        <strong id="experimental-mobile">poser un cadre expérimental</strong> (ce),
+                        <strong id="multidisciplinary-mobile">passer en mode pluridisciplinaire</strong> (mp),
+                        <strong id="programRhythm-mobile">rythmer le programme</strong> (p),
+                        <strong id="involveAndForm-mobile">impliquer et former les agents</strong> (a),
+                        <strong id="concreteCase-mobile">travailler à partir de cas concrets</strong> (cc),
+                        <strong id="ecosysteme-mobile">s’appuyer sur l'écosystème</strong> (e),
+                        <strong id="project-mobile">se projeter dans le futur labo</strong> (fl).
                         Ce site vise à expliciter ces principes et apporte un retour d’expérience sur leur mise
                         en oeuvre dans les différentes collectivités engagées dans La Transfo. L’objectif est de
                         permettre à chacun de se réapproprier et d’ajuster ces principes d’action à son contexte.
@@ -219,7 +219,7 @@
                 <div class="title-box">
 
                     <h2>Contacts</h2>
-                    <div class="social-links">
+                    <div>
                         <ul>
                             <li> <a href="https://twitter.com/La27eregion" target="_blank">
                                     <img src="images/about/transfo-twitter.png" alt="logo twitter">
