--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -301,14 +301,18 @@
                     </div>
 
                     <div>
-                        <p>Une Transfo encore plus expérimentale et partenariale, embarquant deux collectivités d’un
-                            même territoire? 
+                        <p><span>☛ &nbsp;défi 001 </span>Une Transfo encore plus expérimentale et partenariale,
+                            embarquant
+                            deux collectivités d’un même territoire? 
                         </p>
-                        <p>Une Transfo élus / administration, qui impliquerait des élus comme “ambassadeurs”?
+                        <p><span>☛ &nbsp;défi 002 </span>Une Transfo élus / administration, qui impliquerait des élus
+                            comme
+                            “ambassadeurs”?
                         </p>
-                        <p>Un “démarreur bienveillant” de La Transfo avec la direction générale (c’est à dire un
-                            mode opératoire pour clarifier le contexte et formuler/réinterroger les attentes des
-                            décideurs avant de démarrer le programme)
+                        <p><span>☛ &nbsp;défi 003 </span>Un “démarreur bienveillant” de La Transfo avec la direction
+                            générale
+                            (c’est à dire un mode opératoire pour clarifier le contexte et formuler/réinterroger les
+                            attentes des décideurs avant de démarrer le programme)
                         </p>
 
                     </div>
@@ -702,7 +706,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -714,13 +718,13 @@
                     </div>
 
                     <div>
-                        <p>Associer un.e spécialiste de l’ingénierie pédagogiques à la démarche, pour expérimenter
-                            d’autres formats et creuser les croisement entre innovation pédagogique et transformation
-                            des administrations.
+                        <p><span>☛ &nbsp;défi 001 </span>Associer un.e spécialiste de l’ingénierie pédagogiques à la
+                            démarche, pour expérimenter d’autres formats et creuser les croisement entre innovation
+                            pédagogique et transformation des administrations.
                         </p>
-                        <p>Constituer un “pool” de professionnels pluridisciplinaires intervenant ponctuellement, en
-                            appui à l’équipe design, en y associant des expertises nouvelles (par exemple
-                            neurosciences, risques psychosociaux, community organizing). </p>
+                        <p><span>☛ &nbsp;défi 002 </span>Constituer un “pool” de professionnels pluridisciplinaires
+                            intervenant ponctuellement, en appui à l’équipe design, en y associant des expertises
+                            nouvelles (par exemple neurosciences, risques psychosociaux, community organizing). </p>
                     </div>
 
                 </article>
@@ -1078,7 +1082,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -1090,12 +1094,12 @@
                     </div>
 
                     <div>
-                        <p><strong>Une Transfo au rythme modulable :</strong> neuf mois de sessions classiques et
-                            six mois où on s’autorise à re-dessiner les priorités et à remettre à plat le rythme en
-                            fonction des besoins du laboratoire : embarquer et former un nouveau groupe d’agents
-                            embarqués, mobiliser, former et structurer un groupe de futurs équipiers et/ou contributeurs
-                            du labo, mettre l’accent sur la co-construction de certaines dimensions du labo, sur la
-                            consolidation du portage politique et managérial, etc.
+                        <p><span>☛ &nbsp;Une Transfo au rythme modulable :</span> neuf mois de sessions
+                            classiques et six mois où on s’autorise à re-dessiner les priorités et à remettre à plat le
+                            rythme en fonction des besoins du laboratoire : embarquer et former un nouveau groupe
+                            d’agents embarqués, mobiliser, former et structurer un groupe de futurs équipiers et/ou
+                            contributeurs du labo, mettre l’accent sur la co-construction de certaines dimensions du
+                            labo, sur la consolidation du portage politique et managérial, etc.
                         </p>
                     </div>
 
@@ -1419,7 +1423,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -1431,11 +1435,11 @@
                     </div>
 
                     <div>
-                        <p>Mettre en place un processus de certification ou de validation des acquis par les
-                            ressources humaines.
+                        <p><span>☛ &nbsp;défi 001 </span>Mettre en place un processus de certification ou de validation
+                            des acquis par les ressources humaines.
                         </p>
-                        <p>Faciliter l’intégration de nouveaux agents et la diffusion des pratiques avec un système
-                            de parrains.
+                        <p><span>☛ &nbsp;défi 002 </span>Faciliter l’intégration de nouveaux agents et la diffusion des
+                            pratiques avec un système de parrains.
                         </p>
                     </div>
 
@@ -1946,7 +1950,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -1958,12 +1962,13 @@
                     </div>
 
                     <div>
-                        <p>Parvenir à impliquer davantage les élus dans un cas pratique, soit en les positionnant en
-                            tant que commanditaires d’un cas, soit en les impliquant dans les étapes méthodologiques
-                            de conduite d’un cas.
+                        <p><span>☛ &nbsp;défi 001 </span>Parvenir à impliquer davantage les élus dans un cas pratique,
+                            soit en les positionnant en tant que commanditaires d’un cas, soit en les impliquant dans
+                            les étapes méthodologiques de conduite d’un cas.
                         </p>
-                        <p>Penser l’après cas pratique : imaginer une manière d’accompagner la direction porteuse de
-                            cas dans l’appropriation et l’usages du travail de La Transfo dans ses projets réels.
+                        <p><span>☛ &nbsp;défi 002 </span>Penser l’après cas pratique : imaginer une manière
+                            d’accompagner la direction porteuse de cas dans l’appropriation et l’usages du travail de La
+                            Transfo dans ses projets réels.
                         </p>
                     </div>
 
@@ -2319,7 +2324,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -2331,14 +2336,15 @@
                     </div>
 
                     <div>
-                        <p>Faire une Transfo avec un groupe composés d’innovateurs internes (innovation managériale
-                            ou RH, chargé de projets citoyens, chargé d’open data…).
+                        <p><span>☛ &nbsp;défi 001 </span>Faire une Transfo avec un groupe composés d’innovateurs
+                            internes (innovation managériale ou RH, chargé de projets citoyens, chargé d’open data…).
                         </p>
-                        <p>Une Transfo avec acteurs du territoire, dans le cadre d’un groupe mixte agents interne -
-                            partenaires externe.
+                        <p><span>☛ &nbsp;défi 002 </span>Une Transfo avec acteurs du territoire, dans le cadre d’un
+                            groupe mixte agents interne - partenaires externe.
                         </p>
-                        <p>Intégrer dans l’ADN du projet l’ambition de faire du labo un outils partagé avec une
-                            gouvernance ouverte, impliquant l’ensemble de l'écosystème interne et externe.
+                        <p><span>☛ &nbsp;défi 003 </span>Intégrer dans l’ADN du projet l’ambition de faire du labo un
+                            outils partagé avec une gouvernance ouverte, impliquant l’ensemble de l'écosystème interne
+                            et externe.
                         </p>
                     </div>
 
@@ -2680,7 +2686,7 @@
 
                 <!-- DEFIS -->
 
-                <article class="container">
+                <article class="container challenge">
                     <div class="title-box">
 
                         <h2>Défis</h2>
@@ -2692,9 +2698,10 @@
                     </div>
 
                     <div>
-                        <p>Et si on ouvrait les temps de co-construction du labo à des citoyens?</p>
-                        <p>Et si on ne partait pas de zéro mais de deux ou trois modèles de labos différents qu’on
-                            testerait pendant la Transfo?
+                        <p><span>☛ &nbsp;défi 001 </span>Et si on ouvrait les temps de co-construction du labo à des
+                            citoyens?</p>
+                        <p><span>☛ &nbsp;défi 002 </span>Et si on ne partait pas de zéro mais de deux ou trois modèles
+                            de labos différents qu’on testerait pendant la Transfo?
                         </p>
                     </div>
 
