feat: english pages

--- a/about-english.html
+++ b/about-english.html
@@ -19,28 +19,28 @@
         <nav class="container">
 
             <div class="logo_ctn">
-                <a href="index.html">
+                <a href="english.html">
                     <img src="images/logos/LogoNavBar.png" alt="logo La Transfo Code Source">
                 </a>
             </div>
 
             <ul class="nav_links">
                 <li class="link-home">
-                    <a class="hover_orange" href="index.html">Code Source</a>
+                    <a class="hover_orange" href="english.html">Source Code</a>
                 </li>
                 <li>
-                    <a class="orange hover_orange" href="about.html">À propos</a>
+                    <a class="orange hover_orange" href="about-english.html">About</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="faq.html">FAQ</a>
+                    <a class="hover_orange" href="faq-english.html">FAQ</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="cousins.html">Nos cousins</a>
+                    <a class="hover_orange" href="cousins-english.html">Our cousins</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="about-english.html"><img
-                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-united-kingdom_1f1ec-1f1e7.png"
-                            alt="drapeau anglais"></a>
+                    <a class="hover_orange" href="about.html"><img
+                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-st-martin_1f1f2-1f1eb.png"
+                            alt="french flag"></a>
                 </li>
             </ul>
 
@@ -60,7 +60,7 @@
                     <img class="logo " src="images/logos/logoAbout-laTransfo.svg" alt="logo La Transfo Code Sources">
                 </div>
                 <p>
-                    <a href="index.html">Fermer</a>
+                    <a href="english.html">Close</a>
                 </p>
 
             </div>
@@ -69,7 +69,7 @@
         <!-- CONTENT -->
 
         <div class="content">
-            <p class="sheet">( À propos )</p>
+            <p class="sheet">( About )</p>
 
             <!-- ILLUSTRATIONS -->
 
@@ -186,7 +186,7 @@
 
                     <h2>Nos partenaires</h2>
                     <div>
-                        <p>04 MAI 2020</p>
+                        <p>MAY 04 2020</p>
                         <p>( No Model ) N°. 00P.001</p>
                     </div>
 
@@ -246,8 +246,7 @@
                     </p>
                     <p>
                         Pour en savoir plus sur la Transfo et les autres projets que nous développons, contactez nous
-                        par
-                        mail à <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
+                        par mail à <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
                         ou par telephone au <a class="contact" href="tel:+33183629827">01 83 62 98 27</a>.
                     </p>
                 </div>
