--- a/cousins-english.html
+++ b/cousins-english.html
@@ -19,28 +19,28 @@
         <nav class="container">
             <div class="logo_ctn">
 
-                <a href="index.html">
+                <a href="english.html">
                     <img src="images/logos/LogoNavBar.png" alt="logo la Transfo Code Source">
                 </a>
 
             </div>
             <ul class="nav_links">
                 <li class="link-home">
-                    <a class="hover_orange" href="index.html">Code Source</a>
+                    <a class="hover_orange" href="english.html">Code Source</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="about.html">À propos</a>
+                    <a class="hover_orange" href="about-english.html">About</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="faq.html">FAQ</a>
+                    <a class="hover_orange" href="faq-english.html">FAQ</a>
                 </li>
                 <li>
-                    <a class="orange hover_orange" href="cousins.html">Nos cousins</a>
+                    <a class="orange hover_orange" href="cousins-english.html">Our cousins</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="cousins-english.html"><img
-                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-united-kingdom_1f1ec-1f1e7.png"
-                            alt="drapeau anglais"></a>
+                    <a class="hover_orange" href="cousins.html"><img
+                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-st-martin_1f1f2-1f1eb.png"
+                            alt="french flag"></a>
                 </li>
             </ul>
 
@@ -58,10 +58,10 @@
             <div class="container">
 
                 <div>
-                    <img class="logo " src="images/logos/logoCousins-laTransfo.svg" alt="logo La Transfo Les Cousins">
+                    <img class="logo " src="images/logos/logoCousins-laTransfo.svg" alt="logo La Transfo The Cousins">
                 </div>
                 <p>
-                    <a href="index.html">Fermer</a>
+                    <a href="english.html">Close</a>
                 </p>
             </div>
         </div>
@@ -69,7 +69,7 @@
         <!-- CONTENT -->
 
         <div class="content">
-            <p class="sheet">( Nos cousins )</p>
+            <p class="sheet">( Our cousins )</p>
 
             <div class="container">
 
@@ -90,7 +90,7 @@
 
                         <h2>Programme labo PIA</h2>
                         <div>
-                            <p>04 MAI 2020</p>
+                            <p>MAY 04 2020</p>
                             <p>( No Model ) N°. 00C.001</p>
                         </div>
 
@@ -212,7 +212,7 @@
 
                         <h2>Mission de préfiguration du labo de la creuse</h2>
                         <div>
-                            <p>04 MAI 2020</p>
+                            <p>MAY 04 2020</p>
                             <p>( No Model ) N°. 00C.002</p>
                         </div>
 
