--- a/faq-english.html
+++ b/faq-english.html
@@ -19,28 +19,28 @@
         <nav class="container">
             <div class="logo_ctn">
 
-                <a href="index.html">
+                <a href="english.html">
                     <img src="images/logos/LogoNavBar.png" alt="logo La Transfo Code Source">
                 </a>
 
             </div>
             <ul class="nav_links">
                 <li class="link-home">
-                    <a class="hover_orange" href="index.html">Code Source</a>
+                    <a class="hover_orange" href="english.html">Source Code</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="about.html">À propos</a>
+                    <a class="hover_orange" href="about-english.html">About</a>
                 </li>
                 <li>
-                    <a class="orange hover_orange" href="faq.html">FAQ</a>
+                    <a class="orange hover_orange" href="faq-english.html">FAQ</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="cousins.html">Nos cousins</a>
+                    <a class="hover_orange" href="cousins-english.html">Our cousins</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="faq-english.html"><img
-                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-united-kingdom_1f1ec-1f1e7.png"
-                            alt="drapeau anglais"></a>
+                    <a class="hover_orange" href="faq.html"><img
+                            src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-st-martin_1f1f2-1f1eb.png"
+                            alt="french flag"></a>
                 </li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
                     <img class="logo " src="images/logos/logoFaq-laTransfo.svg" alt="logo La Transfo FAQ">
                 </div>
                 <p>
-                    <a href="index.html">Fermer</a>
+                    <a href="english.html">Close</a>
                 </p>
 
             </div>
