feat: english flag

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 <li>
                     <a class="hover_orange" href="about-english.html"><img
                             src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-united-kingdom_1f1ec-1f1e7.png"
-                            alt="drapeau anglais"></a>
+                            alt="drapeau anglais" class="flag"></a>
                 </li>
             </ul>
 
