--- a/faq-english.html
+++ b/faq-english.html
@@ -40,7 +40,7 @@
                 <li>
                     <a class="hover_orange" href="faq.html"><img
                             src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/joypixels/257/flag-st-martin_1f1f2-1f1eb.png"
-                            alt="french flag"></a>
+                            alt="french flag" class="flag"></a>
                 </li>
             </ul>
         </nav>
