--- a/index.html
+++ b/index.html
@@ -2878,7 +2878,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <a href="english.html">In english please</a>
+        <a href="english.html">In english</a>
     </footer>
 
     <script src="js/script.js"></script>
